# VLA-human-safety-bench

./: .gitignore  CHANGELOG.md  MUJOCO_LOG.TXT  PACE_STATUS.md  README.md  pyproject.toml
configs/: benchmark.json  mesh_assets.example.json  mesh_assets.json  model_registry.json  openvla.json  smoke.json  vlas.json
docs/: architecture.md  external-assets.md  pace.md  vla-integrations.md
requirements/: model-nora-common.txt  model-octo.txt  model-smolvla.txt  openvla-min.txt  pace-base.txt
scripts/: fetch_mujoco_kuka.py  import_gltf_assets.py
scripts/model_adapters/: tinyvla_stub.py
scripts/pace/: bootstrap_env.sh  install_model_runtime.sh  make_upload_bundle.sh  run_harness.sh  run_model_adapter.sh
slurm/: pace_all_models.sbatch  pace_full_benchmark.sbatch  pace_guarded_openvla_a100.sbatch  pace_openvla_a100.sbatch  pace_smoke.sbatch
tests/: test_assets.py  test_cli.py  test_hardware_injection.py  test_harness.py  test_kinematic_sim.py  test_mujoco_backend.py  test_openvla_adapter.py  test_scoring.py  test_video.py
vla_safety_bench/: __init__.py  __main__.py  assets.py  cli.py  harness.py  overlays.py  scenarios.py  scoring.py  types.py  video.py
vla_safety_bench/adapters/: __init__.py  base.py  model_registry.py  openvla.py  rule_based.py  unsafe.py  vla_models.py
vla_safety_bench/hardware/: __init__.py  hardware_io.py  injection_backend.py  pixel_injection.py
vla_safety_bench/sim/: __init__.py  kinematic_backend.py  mesh_assets.py  mujoco_backend.py  mujoco_scenario_backend.py  scenario_state.py
